# fteik

./: CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Include_FTeik3d_2.0.f  README.md  README.txt  analytic.F90  autoCode.f90  constants.F90  fteik.c  fteik.f90  fteikGraph.cpp  fteik_mpi.F90  fteik_utils.F90  fwrapper.c  graph.c  graph.f90  graph3d.F90  h5io.F90  h5io.c  h5io_utils.c  io.c  ipps.F90  localSolver.F90  locate.F90  memory.F90  model.F90  modules.F90  modules.f90  os.c  rays.F90  receiver.F90  solveEikonal.F90  solver.F90  solver2D.F90  solver3D.F90  sort.c  source.F90  test.c  xdmf.c
.circleci/: config.yml
CMakeModules/: Find_fteik.cmake.in
doxygen/: locationCommunicationManagement.xml
examples/: lot2d.c
include/: CMakeLists.txt  config.h.in  fteik.h  fteikGraph.h  fteikGraph.hpp  fteik_config.h  fteik_fortran.h  fteik_h5io.h  fteik_io.h  fteik_os.h  fteik_sorting.h  fteik_struct.h  fteik_xdmf.h  h5io.h  sorting.h
include/fteik/: config.h.in  fteik.h  fteik_analytic.h  fteik_fortran.h  fteik_h5io.h  fteik_os.h  fteik_sorting.h  fteik_xdmf.h
performanceTests/: convergence.c
python/: fteik.py  fteik2d.py  fteik3d.py  fteikAnalytic.py  prefetch.py
refsrc/: Include_FTeik2d.f  Include_FTeik2d_grad.f  fteik.f90  fteik2d.F90
testing/: fteikGraph.hpp  loctest.c  rayTest.F90  test2d.F90  tests.c
unitTests/: fteikGraph.cpp  fteik_graph.h  loctest.c  tests.c
